# SimREX

./: CMakeLists.txt  LICENSE  README.md  SimREX.cpp
core/: CMakeLists.txt
core/global-event-model/: CMakeLists.txt  GEMLinkDef.h
core/global-event-model/include/global-event-model/: GEMLinkDef.h  event.h  hit.h  logger.h  particle.h  physics_process_def.h
core/global-event-model/src/: event.cpp  hit.cpp  particle.cpp
core/global-event-model/tests/: event_test.cpp  physics_process_def_test.cpp
core/reconstruction-analysis/: CMakeLists.txt
core/reconstruction-analysis/include/: reconstruction.h
core/reconstruction-analysis/include/reconstruction/: sim.h
core/reconstruction-analysis/src/: reconstruction.cpp
core/reconstruction-analysis/src/reconstruction/: sim.cpp
core/simulation/: CMakeLists.txt
core/simulation/include/: simulation.h
core/simulation/include/control/: control.h  data_manager.h  database.h
core/simulation/include/detector/: detector_construction.h  matrix_parameterization.h  sensitive_detector.h
core/simulation/include/magnetic-field/: magnetic_field.h
core/simulation/include/user-action/: action_initialization.h  event_action.h  primary_generator_action.h  run_action.h  stepping_action.h  tracking_action.h  worker_initialization.h
core/simulation/src/: simulation.cpp
core/simulation/src/control/: control.cpp  data_manager.cpp  database.cpp
core/simulation/src/detector/: detector_construction.cpp  matrix_parameterization.cpp  sensitive_detector.cpp
core/simulation/src/magnetic-field/: magnetic_field.cpp
core/simulation/src/user-action/: action_initialization.cpp  event_action.cpp  primary_generator_action.cpp  run_action.cpp  stepping_action.cpp  tracking_action.cpp  worker_initialization.cpp
doc/: Doxyfile.in
scripts/: det.yaml  main.yaml  mat.yaml
